# alzheimer-prediction

./: MVP_2_ML_PUCRIO_FINAL_v2.ipynb  README.md  pyproject.toml  run_tests.py
backend/: README.md  app.py  database.py  requirements.txt
backend/tests/: README.md  conftest.py  test_model_performance.py
backend/trained_model/: best_model_pipeline.joblib  feature_columns.joblib  model_info.json
frontend/: README.md  index.html  script.js  style.css
notebook/: MVP_2_ML_PUCRIO_FINAL_v2.ipynb  README.md
